@@ -1,5 +1,7 @@
 Changes from 1.6.0 to 1.5.0
 ---------------------------
+** Improvement
+    * [FELIX-4033] - Issue warning messages for redundant SCR annotation combinations
 ** Bug
     * [FELIX-4030] - Generated metatype file contains all metatype infos
     * [FELIX-3542] - Escape property values used as Metatype default values
